<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
android:paddingStart="15dp"
android:paddingEnd="15dp"
android:paddingTop="25dp">


<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1."
        android:textColor="#000"
        android:id="@+id/item_num"
        android:textSize="21sp"
        android:layout_alignParentStart="true"/>

<ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_toEndOf="@id/item_num"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_launcher_foreground"
        android:id="@+id/detail_icon"/>

<androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#22ab1e"
        android:text="Title"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="15sp"
        app:cardBackgroundColor="@color/colorAccent"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@id/detail_icon"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">
    <TextView

            android:background="@drawable/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_toEndOf="@id/detail_icon"
            android:id="@+id/detail_title_tv"/>
</androidx.cardview.widget.CardView>

 <!--<TextView

         android:background="@drawable/background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
         android:textColor="#000"
         android:textStyle="bold"
         android:textSize="15sp"
         android:fontFamily="@font/montserrat_regular"
         android:layout_marginStart="25dp"
         android:layout_toEndOf="@id/detail_icon"
         android:id="@+id/detail_title_tv"/>

 -->
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/expand_details_icon"
        android:src="@drawable/expand_icon"
        android:background="@drawable/ripple_effect"
        android:layout_alignParentEnd="true"/>

<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/listen_icon"
        android:id="@+id/listen_icon"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@id/detail_icon"
        android:layout_below="@id/card"/>


<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_list_text"
        android:fontFamily="@font/montserrat_light"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="10sp"
        android:layout_toEndOf="@id/listen_icon"
        android:id="@+id/add_to_list_tv"
        android:layout_below="@id/card"
        android:textColor="#000"/>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_layout"
        android:visibility="gone"
        android:layout_marginTop="18dp"
        android:layout_below="@id/detail_icon"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/definition_text"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:fontFamily="@font/montserrat_light"
            android:textSize="12sp"
            android:id="@+id/definition_tv"
            android:textColor="#000"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="12dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000"
            android:fontFamily="@font/montserrat_regular"
            android:textStyle="bold"
            android:text="@string/example_text"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:id="@+id/example_tv"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_light"
            android:textColor="#000"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"/>


</LinearLayout>

<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bottom_border_color"
        android:layout_marginTop="15dp"
        android:layout_below="@id/details_layout"/>


</RelativeLayout>

