<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".activities.QuizSelectActivity">

   <!--     <ImageView

                android:id="@+id/cancel"
                android:layout_marginRight="20dp"
                android:layout_marginTop="170dp"

                android:layout_width="24dp"
                android:layout_gravity="right|top"
                android:layout_height="24dp"

                android:layout_alignParentTop="true"
                android:src="@drawable/ic_close_black_18dp" />
   -->    <androidx.cardview.widget.CardView
                  android:layout_gravity="center"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  app:cardCornerRadius="6.7dp"
                  android:layout_marginTop="30dp"
                  android:background="#ebebeb"
                  app:cardBackgroundColor="#ebebeb"
                  android:layout_marginHorizontal="25dp"

          >


              <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:padding="20dp">
                  <TextView
                          android:layout_marginVertical="30dp"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/select_btn"
                          android:textSize="18sp"
                          android:textColor="#000000"
                          android:letterSpacing="0.03"
                          android:lineSpacingExtra="-8sp"
                          android:gravity="center_horizontal"
                          android:fontFamily="@font/montserrat_bold"
                  />
                  <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                      <RelativeLayout
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:background="@drawable/light_borders">
                          <TextView
                                  android:layout_alignParentLeft="true"
                                  android:padding="15dp"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textSize="14.7sp"
                                  android:fontFamily="@font/montserrat_regular"
                                  android:textColor="#000000"
                                  android:letterSpacing="0.03"
                                  android:layout_centerVertical="true"
                                  android:lineSpacingExtra="-4.7sp"
                                  android:gravity="center_horizontal"
                                  android:text="@string/urdu_meaning"
                          />
                          <CheckBox
                                  android:id="@+id/Quiz_Select_cb1"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:onClick="onCheckboxClicked"
                                  android:layout_alignParentRight="true"
                                  android:layout_centerVertical="true"
                                  android:button="@drawable/checkbox_selector"
                                  android:padding="10dp"
                          />
                      </RelativeLayout>

                      <RelativeLayout
                              android:layout_marginVertical="30dp"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:background="@drawable/light_borders">
                          <TextView
                                  android:layout_alignParentLeft="true"
                                  android:padding="15dp"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textSize="14.7sp"
                                  android:fontFamily="@font/montserrat_regular"
                                  android:textColor="#000000"
                                  android:letterSpacing="0.03"
                                  android:layout_centerVertical="true"
                                  android:lineSpacingExtra="-4.7sp"
                                  android:gravity="center_horizontal"
                                  android:text="@string/english_meaning"
                          />
                          <CheckBox
                                  android:id="@+id/Quiz_Select_cb2"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_alignParentRight="true"
                                  android:onClick="onCheckboxClicked"
                                  android:layout_centerVertical="true"
                                  android:button="@drawable/checkbox_selector"
                                  android:padding="10dp"
                          />
                      </RelativeLayout>

                      <RelativeLayout
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:background="@drawable/light_borders">
                          <TextView
                                  android:layout_alignParentLeft="true"
                                  android:padding="15dp"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textSize="14.7sp"
                                  android:fontFamily="@font/montserrat_regular"
                                  android:textColor="#000000"
                                  android:letterSpacing="0.03"
                                  android:layout_centerVertical="true"
                                  android:lineSpacingExtra="-4.7sp"
                                  android:gravity="center_horizontal"
                                  android:text="@string/sentences"
                          />
                          <CheckBox
                                  android:id="@+id/Quiz_Select_cb3"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_alignParentRight="true"
                                  android:onClick="onCheckboxClicked"
                                  android:layout_centerVertical="true"
                                  android:button="@drawable/checkbox_selector"
                                  android:padding="10dp"
                          />
                      </RelativeLayout>
                  </LinearLayout>



                  <RelativeLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="30dp"
                  >
                      <Button
                              android:layout_marginLeft="5dp"
                              android:layout_alignParentLeft="true"
                              android:onClick="onClick"
                              android:id="@+id/Quiz_Select_btn_DontAsk"
                              android:layout_width="wrap_content"
                              android:paddingHorizontal="20dp"
                              android:layout_height="wrap_content"
                              android:textSize="11.3sp"
                              android:textAllCaps="false"
                              android:textColor="#000000"

                              android:background="@drawable/grey_background_black_border"
                              android:fontFamily="@font/montserrat_regular"
                              android:letterSpacing="0.02"
                              android:lineSpacingExtra="-2.7sp"
                              android:text="@string/don_t_ask_again_btn"
                      />
                      <androidx.cardview.widget.CardView
                              android:layout_alignParentRight="true"
                              android:layout_width="wrap_content"
                              android:layout_marginRight="5dp"
                              android:layout_height="wrap_content"
                              app:cardBackgroundColor="#445ed0"
                              app:cardCornerRadius="6.7dp"
                      >
                          <Button
                                  android:id="@+id/Quiz_Select_btn_done"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textSize="12.7sp"
                                  android:textAllCaps="false"
                                  android:onClick="onClick"
                                  android:textColor="#ffffff"
                                  android:background="#445ed0"
                                  android:letterSpacing="0.02"
                                  android:lineSpacingExtra="-4sp"
                                  android:fontFamily="@font/montserrat_regular"
                                  android:gravity="center"
                                  android:text="Done"
                          />

                      </androidx.cardview.widget.CardView>

                  </RelativeLayout>

              </LinearLayout>


          </androidx.cardview.widget.CardView>




    <!--   <include
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               layout="@layout/bottom_bar"/>
   -->
</FrameLayout>